--- a/scss/_setting.scss
+++ b/scss/_setting.scss
@@ -3,5 +3,6 @@ $pramary-font-color: #222;
 $pramary-font-size: 14px;
 $pramary-font-weight: 400;
 $pramary-bg-color: #fff;
+$pramary-theme-color : #20bdbe;
 $screen-mobile: 720px;
 $screen-tablet: 1024px;
