--- a/scss/common/_header.scss
+++ b/scss/common/_header.scss
@@ -1,16 +1,20 @@
 header{
     article{
-        position: relative;
-        @include flexLayout(row,space-between,center);
+        @include flexLayout(row, space-between, flex-start);
         width: 100%;
-        padding: 0 70px;
+        padding: 0 50px;
+        .logo{
+            padding-top: 20px;
+            width: 25%;
+        }
         .gnb_area{
             @include flexLayout(column, flex-start, flex-end);
+            position: relative;
             .util{
                 ul{
                     @include flexLayout(row, flex-end, center);
                     li{
-                        padding-top: 20px;
+                        padding-top: 15px;
                         margin-right: 35px;
                         &:last-child{
                             margin-right: 0;
@@ -29,37 +33,38 @@ header{
                         @include flexLayout(row, flex-end, center);
                         >li{
                             position: relative;
-                            height: 58px;
+                            height: 55px;
                             &:last-child{
-                                padding-right: 77px;
+                                margin-right: 20px;
                             }
                             >a{
                                 color: #101010;
                                 font-size: 18px;
                                 font-weight: 700;
                                 display: block;
-                                padding:20px 25px;
+                                padding:19px 25px;
                             }
                             .sub_menu{
                                 display: none;
                                 width: max-content;
                                 min-width: 100%;
                                 position: absolute;
-                                top: 58px;
+                                top: 55px;
                                 left: 0;
                                 text-align: center;
                                 z-index: 99;
                                 font-size: 16px;
-                                padding: 12px 0;
+                                padding: 12px;
                                 background: #fff;
                                 border-radius: 3px;
-                                box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;                        li{
-                                    padding: 12px 0;
+                                box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;                        
+                                li{
+                                    padding: 12px;
                                     &:hover{
                                         background: #f7f7f7;
                                         font-weight: 500;
                                         a{
-                                            color: #20bdbe;
+                                            color:$pramary-theme-color;
                                             padding: 15px 0;
                                         }
                                     }
@@ -67,17 +72,107 @@ header{
                             }
                         }
                     }
-                    &.mobile_btn{
+                    &.all_mn_btn{
                         .login{
                             display: none;
                         }
-                        .all_btn{
-                            position: absolute;
-                            right:  70px;
-                            z-index: 99;
-                            top: 60px;
-                            border: none;
-                            background: none;
+                        .mo_all_btn{
+                            display: none;
+                        }
+
+                    }
+                }
+                .all_btn{
+                    position: absolute;
+                    right: 0;
+                    top: 53px;
+                }
+            }
+            .mo_btn{
+                display: none;
+            }
+        }
+    }
+    .all-menu{
+        &.on{
+            display: block;
+        }
+        animation: all .3s;
+        display: none;
+        position: fixed;
+        top: 50px;
+        width: 100%;
+        height: 100%;
+        z-index: 999;
+        background: #fff;
+        padding:31px 70px 40px;
+        i{
+            position: absolute;
+            top: 6px;
+            right: 50px;
+        }
+        .menu_list{
+            padding: 120px 50px;
+            @include flexLayout(row, space-around, flex-start);
+            .part{
+                >ul{
+                    &:first-child{
+                        margin-bottom: 100px;
+                    }
+                    li{
+                        .tit{
+                            display: block;
+                            position: relative;
+                            font-size: 22px;
+                            font-weight: 700;
+                            margin-bottom: 20px;
+                            &::before{
+                                position: absolute;
+                                content: "";
+                                left: 0;
+                                width: 100%;
+                                height: 2px;
+                                background: #101010;
+                                top: 40px;
+                            }
+                        }
+                        ul{
+                            display: block;
+                            font-size: 18px;
+                            margin-top: 50px;
+                            font-weight: normal;
+                            li{
+                                display: block;
+                                padding: 15px 0;
+                                a{
+                                    &:hover{
+                                        color:$pramary-theme-color;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .mo_nav{
+        display: none;
+    }
+}
+@media screen and (max-width : 1380px) {
+header {
+    article {
+        padding: 0 30px;
+        .gnb_area {
+            nav {
+                >ul {
+                    &.gnb {
+                        >li {
+                            >a {
+                                font-size: 16px;
+                                padding: 19px 23px;
+                            }
                         }
                     }
                 }
@@ -85,179 +180,53 @@ header{
         }
     }
     .all-menu{
-        animation: all .3s;
-        display: none;
-        position: fixed;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 999;
-        background: #fff;
-        padding:31px 70px 40px;
-        .top{
-            @include flexLayout (row ,space-between, flex-start);
-            margin-bottom: 50px;
-            i{
-                .mo_close{
-                    display: none;
-                }
-                display: block;
-                padding-top: 20px;
-            }
-        }
-        .favorite{
-            display: none;
-        }
-        .mo_util{
-            display: none;
-        }
-        .menu_list{
-            padding: 120px 50px;
-            @include flexLayout(row, space-around, flex-start);
-            .part{
-                ul{
-                    &:first-child{
-                        margin-bottom: 100px;
-                    }
-                    .tit{
-                        display: block;
-                        position: relative;
-                        font-size: 22px;
-                        font-weight: 700;
-                        margin-bottom: 20px;
-                        img{
-                            display: none;
-                        }
-                        &::after{
-                            position: absolute;
-                            content: "";
-                            left: 0;
-                            width: 100%;
-                            height: 2px;
-                            background: #101010;
-                            top: 40px;
-                        }
-                    }
-                    .mo_sub_menu{
-                        display: block;
-                        font-size: 18px;
-                        margin-top: 50px;
-                        font-weight: normal;
-                        li{
-                            display: block;
-                            padding: 15px 0;
-                            a{
-                                &:hover{
-                                    color: #20bdbe;
-                                }
-                            }
-                        }
-                    }
-                }
-            }
+        i{
+            right: 30px;
         }
     }
 }
-@include mediaQuery(tablet) {
+}
+@media screen and (max-width : 1240px) {
     header {
         article {
-            padding: 30px;
-            h1{
-                img{
-                    width: 100%;
-                }
+            padding:20px;
+            .logo{
+                padding-top: 0;
             }
             .gnb_area {
-                flex-direction: row;
-                gap: 2rem;
-                .util {
-                    ul {            
-                        li {
-                            padding-top: 0;
-                            margin-right: 10px;
-                            a {
-                                img {
-                                    padding-right: 5px;
-                                    vertical-align: middle;
-                                }
-                            }
-                        }
-                    }
+                .util{
+                    margin-right: 50px;
                 }
                 nav {
                     ul{
                         &.gnb{
                             display: none;
                         }
-                        &.mobile_btn {
-                            .all_btn {
-                                position: static;
-                            }
-                        }
+                    }
+                    .all_btn{
+                        top: 16px;
                     }
                 }
             }
         }
         .all-menu {
-            padding: 0;
-            .top {
-                @include flexLayout (row, space-between, flex-start);
-                padding: 40px 30px;
-                margin-bottom: 0;
-            }
-            .menu_list {
-                padding: 10px 0;
-                @include flexLayout(column, flex-start, flex-start);
-                .part {
-                    width: 100%;
-                    ul {
-                        &:first-child {
-                            margin-bottom: 0;
-                        }
-                        li {
-                            width: 100%;
-                            .tit {
-                                @include flexLayout (row,space-between,center);
-                                font-size: 22px;
-                                margin-bottom: 0;
-                                font-weight: 500;
-                                padding: 40px 30px;
-                                img{
-                                    display: block;
-                                    transition: all .4s;
-                                }
-                                &.on{
-                                    img{
-                                        transform: rotate(-180deg);
-                                    }
-                                }
-                                &::after {
-                                    display: none;
-                                }
-                            }
-                            .mo_sub_menu {
-                                display: none;
-                                margin-top: 0;
-                                background: #f3f3f3;
-                                li{
-                                    padding: 0;
-                                    a{
-                                        padding: 20px 50px;
-                                        display: block;
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
+            top: 55px;
+            padding: 20px;
+            .close{
+                top: -20px;
+                right: 20px;
             }
         }
     }
 }
-@include mediaQuery(mobile) {
+@media screen and (max-width : 790px) {
     header {
         article {
             padding: 2rem;
+            @include flexLayout (row , space-between, center);
+            .logo {
+                position: static;
+                }
             h1{
                 width: 50%;
             }
@@ -267,30 +236,40 @@ header{
                 }
                 nav{
                     ul{
-                        &.mobile_btn{
-                            @include flexLayout(row,flex-end,center);
-                            gap: 2rem;
-                            .login{
-                                display: block;
-                            }
+                        &.gnb{
+                            display: none
                         }
                     }
+                    .all_btn{
+                        display: none !important;
+                    }
+                }
+                .mo_btn{
+                    @include flexLayout(row, flex-end,center);
+                    gap: 2rem;
                 }
             }
         }
         div{
-            &.all-menu {
-                animation: all .3s;
+            &.all-menu{
+                display: none !important;
+            }
+            &.mo_nav{
+                &.on{
+                    display: block;
+                }
                 display: none;
+                animation: all .3s;
                 position: fixed;
                 top: 0;
                 z-index: 999;
                 background: #fff;
                 padding: 0;
-                >.top {
+                height: 100vh;
+                >.mo_top {
                     @include flexLayout (row, space-between, flex-end) ;
                     margin-bottom: 1.6rem;
-                    padding: 2rem 3rem;
+                    padding: 2rem;
                     border-bottom: 1px solid #e0e0e0;
                     position: relative;
                     &::before{
@@ -301,20 +280,6 @@ header{
                         width: 100%;
                         height: 15px;
                         background: #f3f3f3;
-                    }
-                    .logo{
-                        display: none;
-                    }
-                    i {
-                        &.close{
-                            padding-top: 0;
-                            .mo_close{
-                                display: block
-                            }
-                            .pc_close{
-                                display: none;
-                            }
-                        }
                     }
                     .mo_util{
                         @include flexLayout (row, flex-start, flex-end);
@@ -327,7 +292,6 @@ header{
                                 right: -15px;
                                 top: 50%;
                                 transform: translateY(-50%);
-
                             }
                             &:last-child{
                                 margin-right: 0;
@@ -339,7 +303,6 @@ header{
                                 }
                                 a{
                                     font-size: 2.8rem;
-                                    font-size: 700;
                                     font-weight: 700;
                                 }
                             }
@@ -349,10 +312,15 @@ header{
                             }
                         }
                     }
+                    i {
+                        &.mo_close {
+                            padding-top: 0;
+                        }
+                    }
                 }
                 .favorite {
-                    display: block;
                     padding: 3rem;
+                    padding-bottom: 0;
                     border-bottom: 1px solid #e0e0e0;
                     position: relative;
                     margin-bottom: 1.6rem;
@@ -386,16 +354,17 @@ header{
                     ul{
                         @include flexLayout (row, space-around, center);
                         flex-wrap: wrap;
-                        gap: 4rem;
-                        padding: 3rem 0;
+                        gap: 5rem;
+                        padding: 6rem 0 4rem;
                         li{
                             width: 25%;
                             a{
-                                @include flexLayout (column, space-between, center);
+                                @include flexLayout (column, flex-start, center);
                                 height: 105px;
                                 gap: 20px;
                                 span{
                                     font-size: 2rem;
+                                    line-height: 1.2;
                                     color: #505050;
                                     text-align: center;
                                 }
@@ -403,21 +372,36 @@ header{
                         }
                     }                    
                 }
-                .menu_list {
+                .mo_menu_list {
                     padding: 1rem 0;
                     height: 44.5rem;
                     overflow-y: scroll;
                     @include scrollbar();
                     .part {
+                        @include flexLayout (column,flex-start,flex-start);
                         ul {
+                            width: 100%;
                             li {
+                                width: 100%;
                                 .tit {
+                                    @include flexLayout(row,space-between,center);
                                     font-size: 2.2rem;
                                     padding: 4rem 3rem;
+                                    img{
+                                        transition: all .4s;
+                                    }
+                                    &.on{
+                                        img{
+                                            transform: rotate(180deg);
+                                        }
+                                    }
                                 }
                                 .mo_sub_menu {
+                                    display: none;
+                                    background: #fafafa;
                                     li {
                                         a {
+                                            display: block;
                                             font-size: 1.8rem;
                                             padding: 2rem 5rem;
                                         }
