--- a/scss/app/_rem.scss
+++ b/scss/app/_rem.scss
@@ -1,3 +1,8 @@
+@media (max-width:790px) {
+    html {
+        font-size: 62.5%
+    }
+}
 @media (max-width:$screen-mobile) {
     html {
         font-size: 62.5%;
