--- a/scss/pages/main/_main.scss
+++ b/scss/pages/main/_main.scss
@@ -92,7 +92,7 @@
                 font-size: 68px;
                 span{
                     &.color{
-                        color: #20bdbe;
+                        color: $pramary-theme-color;
                     }
                 }
             }
@@ -111,8 +111,10 @@
                     text-align: center;
                     transition: all .3s;
                     &:hover{
-    
                         box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+                        span{
+                            background-size: 100%;
+                        }
                     }
                     i{
                         position: relative;
@@ -134,6 +136,14 @@
                     }
                     span{
                         word-break: break-all;
+                        color: #111;
+                        background-image: linear-gradient(transparent calc(100% - 1px), #000 1px);
+                        background-position: left bottom;
+                        background-size: 0;
+                        background-repeat: no-repeat;
+                        transition: 0.7s ease;
+                        line-height: 1.6;
+                        padding-bottom: 1.5px;
                     }
                 }
             }
@@ -235,7 +245,7 @@
                         li{
                             &.nth{
                                 font-size: 16px;
-                                color: #20bdbe;
+                                color:$pramary-theme-color;
                                 font-weight: 500;
                                 margin-bottom: 10px;
                             }
@@ -383,7 +393,7 @@
                     }
                     .playpause {
                         button {
-                            left: 46.2rem;
+                            left: 46.5rem;
                         }
                     }
                     .arrow {
@@ -414,6 +424,11 @@
                 li {
                     a {
                         padding: 1.5rem 3.5rem;
+                        &:hover{
+                            span{
+                                background-size: 0;
+                            }
+                        }
                         .cnts {
                             h5 {
                                 font-size: 2.2rem;
