--- a/scss/common/_header.scss
+++ b/scss/common/_header.scss
@@ -9,7 +9,6 @@ header{
         }
         .gnb_area{
             @include flexLayout(column, flex-start, flex-end);
-            position: relative;
             .util{
                 ul{
                     @include flexLayout(row, flex-end, center);
@@ -29,6 +28,7 @@ header{
             }
             nav{
                 >ul{
+                    position: relative;
                     &.gnb{
                         @include flexLayout(row, flex-end, center);
                         >li{
@@ -84,13 +84,16 @@ header{
                 }
                 .all_btn{
                     position: absolute;
-                    right: 0;
+                    right: 50px;
                     top: 53px;
                 }
             }
             .mo_btn{
                 display: none;
             }
+        }
+        .mo_all_btn{
+            display: none;
         }
     }
     .all-menu{
@@ -100,16 +103,16 @@ header{
         animation: all .3s;
         display: none;
         position: fixed;
-        top: 50px;
+        top: 0;
         width: 100%;
         height: 100%;
         z-index: 999;
         background: #fff;
         padding:31px 70px 40px;
-        i{
+        .close{
             position: absolute;
-            top: 6px;
-            right: 50px;
+            top: 50px;
+            right: 70px;
         }
         .menu_list{
             padding: 120px 50px;
@@ -231,29 +234,13 @@ header {
                 width: 50%;
             }
             .gnb_area{
-                .util{
-                    display: none;
-                }
-                nav{
-                    ul{
-                        &.gnb{
-                            display: none
-                        }
-                    }
-                    .all_btn{
-                        display: none !important;
-                    }
-                }
-                .mo_btn{
-                    @include flexLayout(row, flex-end,center);
-                    gap: 2rem;
-                }
+                display: none;
+            }
+            .mo_all_btn{
+                display: block;
             }
         }
         div{
-            &.all-menu{
-                display: none !important;
-            }
             &.mo_nav{
                 &.on{
                     display: block;
