--- a/css/style.css
+++ b/css/style.css
@@ -614,7 +614,7 @@ header .mo_nav {
   }
   header div.mo_nav > .mo_top .mo_util li::before {
     position: absolute;
-    content: url(/images/common/mo_right_arrow.svg);
+    content: url(../images/common/mo_right_arrow.svg);
     right: -15px;
     top: 50%;
     -webkit-transform: translateY(-50%);
