--- a/scss/common/_footer.scss
+++ b/scss/common/_footer.scss
@@ -22,6 +22,9 @@ footer{
                         transform: translateY(-50%);
                     }
                     &:first-child{
+                        &::before{
+                            display: none;
+                        }
                         a{
                             padding-left: 0;
                         }
