--- a/scss/common/_header.scss
+++ b/scss/common/_header.scss
@@ -6,6 +6,12 @@ header{
         .logo{
             padding-top: 20px;
             width: 25%;
+            a{
+                display: block;
+                img{
+                width: 100%;
+                }
+            }
         }
         .gnb_area{
             @include flexLayout(column, flex-start, flex-end);
@@ -99,6 +105,9 @@ header{
     .all-menu{
         &.on{
             display: block;
+            &::-webkit-scrollbar{
+                display: none;
+            }
         }
         animation: all .3s;
         display: none;
@@ -229,9 +238,7 @@ header {
             @include flexLayout (row , space-between, center);
             .logo {
                 position: static;
-                }
-            h1{
-                width: 50%;
+                width: 70%;
             }
             .gnb_area{
                 display: none;
@@ -275,7 +282,7 @@ header {
                             position: relative;
                             &::before{
                                 position: absolute;
-                                content: url(../images/common/mo_right_arrow.svg);
+                                content: url(/images/common/mo_right_arrow.svg);
                                 right: -15px;
                                 top: 50%;
                                 transform: translateY(-50%);
@@ -372,7 +379,7 @@ header {
                                 width: 100%;
                                 .tit {
                                     @include flexLayout(row,space-between,center);
-                                    font-size: 2.2rem;
+                                    font-size: 2.5rem;
                                     padding: 4rem 3rem;
                                     img{
                                         transition: all .4s;
@@ -389,7 +396,7 @@ header {
                                     li {
                                         a {
                                             display: block;
-                                            font-size: 1.8rem;
+                                            font-size:2rem;
                                             padding: 2rem 5rem;
                                         }
                                     }
