--- a/scss/pages/main/_main.scss
+++ b/scss/pages/main/_main.scss
@@ -1,4 +1,10 @@
-#container {
+#wrap{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    #container {
+        flex-grow: 1;
+        overflow: hidden;
     .main_swiper{
         height: 680px;
         .swiper-slide{
@@ -299,53 +305,59 @@
         }
     }
 }
+}
+
 @media screen and (max-width:1280px){
-    #container {
-        article {
-            width: 100%;
-            padding: 0 30px;
+    #wrap{
+        #container {
+            article {
+                width: 100%;
+                padding: 0 30px;
+            }
         }
     }
 }
 @include mediaQuery(tablet) {
-    #container {
-        .main_swiper {
-            .swiper-slide {
-                background-size: cover;
-                background-position: center center;
+    #wrap{
+        #container {
+            .main_swiper {
+                .swiper-slide {
+                    background-size: cover;
+                    background-position: center center;
+                }
             }
-        }
-        .education {
-            .tit{
-                margin-bottom: 50px;
-                text-align: center
-            }
-            ul {
-                @include flexLayout(row, center, center);
-                flex-wrap: wrap;
-                li {
-                    a {
-                        width: 100%;
-                        height: auto;
-                        @include flexLayout(row, center, center);
-                        padding: 15px 35px;
-                        gap: 3rem;
-                        i {
-                            &::before {
-                                display: none;
+            .education {
+                .tit{
+                    margin-bottom: 50px;
+                    text-align: center
+                }
+                ul {
+                    @include flexLayout(row, center, center);
+                    flex-wrap: wrap;
+                    li {
+                        a {
+                            width: 100%;
+                            height: auto;
+                            @include flexLayout(row, center, center);
+                            padding: 15px 35px;
+                            gap: 3rem;
+                            i {
+                                &::before {
+                                    display: none;
+                                }
                             }
-                        }
-                        .cnts{
-                            @include flexLayout(column, center, flex-start);
-                            h5 {
-                                font-size: 22px;
-                                font-weight: 500;
-                                margin:0;
-                                margin-bottom: 20px;
-                            }
-                            span {
-                                text-align: left;
-                                line-height: 1.2;
+                            .cnts{
+                                @include flexLayout(column, center, flex-start);
+                                h5 {
+                                    font-size: 22px;
+                                    font-weight: 500;
+                                    margin:0;
+                                    margin-bottom: 20px;
+                                }
+                                span {
+                                    text-align: left;
+                                    line-height: 1.2;
+                                }
                             }
                         }
                     }
@@ -355,161 +367,166 @@
     }
 }
 @include mediaQuery(mobile){
-    #container {
-        .main_swiper {
-            height: 80rem;
-                .swiper-slide {
-                    .txt_area {
-                        width: 100%;
-                        text-align: center;
-                        left: 0;
-                        i {
-                            font-size: 1.8rem;
-                            padding-bottom: 1rem;
+    .hidden{
+        overflow: hidden;
+    }
+    #wrap{
+        #container {
+            .main_swiper {
+                height: 80rem;
+                    .swiper-slide {
+                        .txt_area {
+                            width: 100%;
+                            text-align: center;
+                            left: 0;
+                            i {
+                                font-size: 1.8rem;
+                                padding-bottom: 1rem;
+                            }
+                            p {
+                                font-size: 5.4rem;
+                                margin-top: 4.5rem;
+                                margin-bottom: 3rem;
+                            }
+                            >span{
+                                font-size: 1.8rem;
+                            }
                         }
-                        p {
-                            font-size: 5.4rem;
-                            margin-top: 4.5rem;
-                            margin-bottom: 3rem;
-                        }
-                        >span{
+                    }
+                    .control {
+                        left: 15%;
+                        .pagination {
+                            width: 10rem;
                             font-size: 1.8rem;
+                            .swiper-pagination-current {
+                                font-size: 2.4rem;
+                            }
+                        }
+                        .progress {
+                            width: 30rem;
+                            top: 0;
+                            left: 9rem;
+                        }
+                        .playpause {
+                            button {
+                                left: 46.5rem;
+                            }
+                        }
+                        .arrow {
+                            width: 7rem;
+                            left: 43rem;
                         }
                     }
                 }
-                .control {
-                    left: 15%;
-                    .pagination {
-                        width: 10rem;
-                        font-size: 1.8rem;
-                        .swiper-pagination-current {
-                            font-size: 2.4rem;
-                        }
-                    }
-                    .progress {
-                        width: 30rem;
-                        top: 0;
-                        left: 9rem;
-                    }
-                    .playpause {
-                        button {
-                            left: 46.5rem;
-                        }
-                    }
-                    .arrow {
-                        width: 7rem;
-                        left: 43rem;
-                    }
-                }
-            }
-        article{
-            margin-top: 12rem;
-            .tit {
-                margin-bottom: 8rem;
-                p {
+            article{
+                margin-top: 12rem;
+                .tit {
                     margin-bottom: 8rem;
-                    font-size: 2rem;
-                    margin-bottom: 2rem;
-                }
-                h3 {
-                    font-size: 6.8rem;
-                }
-            }
-        }
-        .education {
-            .tit {
-                margin-bottom: 5rem;
-            }
-            ul {
-                li {
-                    a {
-                        padding: 1.5rem 3.5rem;
-                        &:hover{
-                            span{
-                                background-size: 0;
-                            }
-                        }
-                        .cnts {
-                            h5 {
-                                font-size: 2.2rem;
-                                margin-bottom: 2rem;
-                            }
-                        }
+                    p {
+                        margin-bottom: 8rem;
+                        font-size: 2rem;
+                        margin-bottom: 2rem;
+                    }
+                    h3 {
+                        font-size: 6.8rem;
                     }
                 }
             }
-        }
-        .contact {
-            height: 160px;
-            article {
+            .education {
+                .tit {
+                    margin-bottom: 5rem;
+                }
                 ul {
                     li {
-                        h6 {
-                            font-size: 2.2rem;
-                        }
-                        span {
-                            font-size: 1.6rem;
-                        }
-                    }
-                }
-            }
-        }
-        .curri {
-            .slide_area {
-                margin-bottom: 12rem;
-                h5 {
-                    font-size: 2.8rem;
-                    margin-bottom: 3rem;
-                }   
-                .curri_slide {
-                    position: static;
-                    .swiper-wrapper {
-                        >li {
-                            width: auto;    
-                            a {
-                                width: 100%;
-                                img {
-                                    width: 100%;
+                        a {
+                            padding: 1.5rem 3.5rem;
+                            &:hover{
+                                span{
+                                    background-size: 0;
                                 }
-                                &.sub_tit {
-                                    font-size: 1.8rem;
-                                    height: auto;
+                            }
+                            .cnts {
+                                h5 {
+                                    font-size: 2.2rem;
                                     margin-bottom: 2rem;
                                 }
                             }
-                            i {
-                                font-size: 1.4rem;
-                                margin: 2rem 0 1rem;
-                            }
-                            li {
-                                &.nth {
-                                    font-size: 1.6rem;
-                                    margin-bottom: 1rem;
-                                }
-                                font-size: 1.5rem;
-                                margin-bottom: .8rem;
+                        }
+                    }
+                }
+            }
+            .contact {
+                height: 160px;
+                article {
+                    ul {
+                        li {
+                            h6 {
+                                font-size: 2.2rem;
                             }
                             span {
-                                bottom: 0;
-                                right: 0;
-                                font-size: 1.5rem;
-                                b {
-                                    padding-left: 3rem;
-                                }
+                                font-size: 1.6rem;
                             }
                         }
                     }
-                    .curri_prev {
-                        display: none;
-                    }
-
-                    .curri_next {
-                        display: none;
-                    }
                 }
-                .data_none {
-                    p {
-                        font-size: 2.6rem;
+            }
+            .curri {
+                .slide_area {
+                    margin-bottom: 12rem;
+                    h5 {
+                        font-size: 2.8rem;
+                        margin-bottom: 3rem;
+                    }   
+                    .curri_slide {
+                        position: static;
+                        .swiper-wrapper {
+                            >li {
+                                width: auto;    
+                                a {
+                                    width: 100%;
+                                    img {
+                                        width: 100%;
+                                    }
+                                    &.sub_tit {
+                                        font-size: 1.8rem;
+                                        height: auto;
+                                        margin-bottom: 2rem;
+                                    }
+                                }
+                                i {
+                                    font-size: 1.4rem;
+                                    margin: 2rem 0 1rem;
+                                }
+                                li {
+                                    &.nth {
+                                        font-size: 1.6rem;
+                                        margin-bottom: 1rem;
+                                    }
+                                    font-size: 1.5rem;
+                                    margin-bottom: .8rem;
+                                }
+                                span {
+                                    bottom: 0;
+                                    right: 0;
+                                    font-size: 1.5rem;
+                                    b {
+                                        padding-left: 3rem;
+                                    }
+                                }
+                            }
+                        }
+                        .curri_prev {
+                            display: none;
+                        }
+
+                        .curri_next {
+                            display: none;
+                        }
+                    }
+                    .data_none {
+                        p {
+                            font-size: 2.6rem;
+                        }
                     }
                 }
             }
@@ -517,42 +534,46 @@
     }
 }
 @media screen and (max-width:550px) {
-    #container {
-        .main_swiper {
-            .control {
-                .progress {
-                    width: 30rem;
-                    top: -.5rem;
-                    left: 9rem;
-                }
-                .playpause {
-                    button{
-                        top: -1.6rem;
+    #wrap{
+        #container {
+            .main_swiper {
+                .control {
+                    .progress {
+                        width: 30rem;
+                        top: -.5rem;
+                        left: 9rem;
                     }
-                }
-                .arrow {width: 8.5rem;
-                    top: -1.1rem;
+                    .playpause {
+                        button{
+                            top: -1.6rem;
+                        }
+                    }
+                    .arrow {width: 8.5rem;
+                        top: -1.1rem;
+                    }
                 }
             }
         }
     }
 }
 @media screen and (max-width:480px) {
-    #container {
-        .main_swiper {
-            .control {
-                top: 80%;
-                .progress {
-                    left: 10rem;
-                }
-                .playpause {
-                    button {
-                        top: -1.3rem;
-                        left: 46.5rem;
+    #wrap{
+        #container {
+            .main_swiper {
+                .control {
+                    top: 80%;
+                    .progress {
+                        left: 10rem;
                     }
-                }
-                .arrow {
-                    top: -1rem;
+                    .playpause {
+                        button {
+                            top: -1.3rem;
+                            left: 46.5rem;
+                        }
+                    }
+                    .arrow {
+                        top: -1rem;
+                    }
                 }
             }
         }
