--- a/scss/common/_footer.scss
+++ b/scss/common/_footer.scss
@@ -54,7 +54,7 @@ footer{
             select{
                 width: 180px;
                 padding-bottom: 15px;
-                background: #282828 url(/images/common/footer_icon_plus.svg) no-repeat right 30%;
+                background: #282828 url(../images/common/footer_icon_plus.svg) no-repeat right 30%;
                 border: none;
                 appearance: none;
                 color: #e0e0e0;
@@ -104,7 +104,7 @@ footer{
                 select {
                     width: 100%;
                     padding-bottom: 15px;
-                    background: #282828 url(/images/common/footer_icon_plus.svg) no-repeat right 30%;
+                    background: #282828 url(../images/common/footer_icon_plus.svg) no-repeat right 30%;
                     border: none;
                     appearance: none;
                     color: #e0e0e0;
